--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 *{
     margin: 0;
-    padding: 0;
-    background-color: bisque;
+    padding: 0%;
+    background-color: #f0f8ff;
+    background-size: cover;
+
 }
 .containor{
     position: absolute;
@@ -15,7 +17,8 @@
 }
 .btn{
     position: relative;
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
+    background-color: black;
     width: 100%;
     height: 60px;
     font-size: larger;
@@ -23,8 +26,8 @@
     /* border-bottom: 1px solid black; */
 }
 .btn:hover{
-    background-color:burlywood;
-    color: aliceblue;
+    background-color: #00fff0;
+    color: #5D8AA8;
 }
 .notes{
     list-style-type: none;
@@ -32,7 +35,7 @@
 .note{
     position: relative;
     height: 40px;
-    padding-top: 20px;
+    padding-top: 10px;
     width: calc(100% - 1px);
     text-align: center;
     font-size: large;
@@ -40,7 +43,7 @@
     transition: 0.5s;
 }
 .note:hover{
-    background-color: rgb(225, 201, 170);
+    background-color: #5D8AA8;
 }
 .delete-btn{
     position:relative;
@@ -49,17 +52,17 @@
     text-align: center;
     transition: 0.5s;
 }
-/* .delete-btn:hover{
-    background-color: brown;
-    color: aliceblue;
-} */
+.delete-btn:hover {
+    background-color: red;
+    color: #5D8AA8;
+}
 img{
     width: 20px;
     margin-left: 80%;
 }
-/* .text{
+/* .text {
     position: absolute;
-    width: 20%;
+    width: 50%;
     margin: 70%;
 } */
 #text{
@@ -69,7 +72,7 @@ img{
     margin-left: calc(30% + 5px);
     padding: 40px;
     font-size:xx-large;
-    background-color: aliceblue;
+    background-color: #3b444b;
 }
 /*     border: 1px solid black;
     text-decoration: none;
