--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@
     margin: 0;
     padding: 0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    overflow-x: hidden;
 }
 .notes{
     background-color:rgb(38, 36, 36);
     width: 25%;
     height: 100vh;
+    overflow: hidden;
 }
 
 .btn{
@@ -23,7 +25,7 @@
   align-items: center;
   border: 1px solid #34974d;
   background-color: #3aa856;
-  border-radius: 15px;
+  /* border-radius: 15px; */
   font-size:larger ;
 }
 
@@ -46,7 +48,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 15px;
+  /* border-radius: 15px; */
 }
 
 .button .svg {
@@ -56,6 +58,7 @@
 
 .button:hover {
   background: #34974d;
+  border-radius: 15px;
 }
 
 .button:hover .button__text {
@@ -65,6 +68,7 @@
 .button:hover .button__icon {
   width: 148px;
   transform: translateX(0);
+  border-radius: 15px;
 }
 
 .button:active .button__icon {
@@ -87,7 +91,7 @@
   /* width: calc(100% - 20px); */
   /* height: 40px; */
   background-color: #1a1a1a;
-  border-radius:0px;
+  /* border-radius: 0px; */
   transition: all .2s;
   font-size: larger;
   color: #dedede;
@@ -96,13 +100,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 1px;
+  /* margin-top: 1px; */
  }
  .card2 span {
     margin-left: 20px;
  }
- .card2 img {
-    margin-right: 20px;
+ .card2 .del {
+    margin-right: 10px;
+    width: 50px;
+    padding: 7px;
  }
  
  .card2:hover {
@@ -114,18 +120,19 @@
   box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
  }
 
- .img{
+ /* .img{
     background-color: #00ff75;
     margin-left: 260px;
     width: 40px;
     margin-top: -30px;
- }
- .del{
+ } */
+/*  .del{
     width: 50px;
-}
+    margin: 5px;
+} */
 
 /*  */
-.note{
+/* .note{
     background-color:rgb(18, 18, 18);
     color: aliceblue;
     width: calc(100% - 40);
@@ -135,11 +142,11 @@
     font-size: larger;
     text-align: center;
     border-radius: 25px;
-}
+} */
 
-.note:hover{
+/* .note:hover{
     background-color: rgb(12, 12, 12);
-}
+} */
 
 
 .note-box{
@@ -147,12 +154,14 @@
   background-color:#1a1a1a;
   color:#dedede;
   /* margin-left: 25%; */
-  width: 100%;
-  height: calc(100vh - 82px);
-  padding: 40px;
+  width: 71%;
+  height: calc(100vh - 100px);
+  padding: 20px;
+  margin-top: 50px;
   font-size: xx-large;
   /* border: 1px solid black; */
   outline: none;
+  /* overflow-y: scroll; */
 }
 .text{
   position: absolute;
@@ -164,4 +173,19 @@
 .NoteImg{
   position: absolute;
   width: 60px;
+}
+.done-img{
+  position: absolute;
+  bottom: 0px;
+  left: 70%;
+  width: 45px;
+  height: 45px;
+}
+.bottom{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 50px;
+  background-color: #1a1a1a;  
 }
