--- a/style.css
+++ b/style.css
@@ -8,14 +8,9 @@
     background-color:rgb(38, 36, 36);
     width: 25%;
     height: 100vh;
-    overflow: hidden;
 }
 
-.btn{
-    margin-left: calc(100% - 170px);
-    padding-bottom: 10px;
-    padding-top: 10px;
-}
+
 .button {
   position: relative;
   width: 150px;
@@ -25,7 +20,6 @@
   align-items: center;
   border: 1px solid #34974d;
   background-color: #3aa856;
-  /* border-radius: 15px; */
   font-size:larger ;
 }
 
@@ -48,7 +42,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* border-radius: 15px; */
 }
 
 .button .svg {
@@ -80,27 +73,19 @@
 }
 .card {
   width: 100%;
-  /* height: 60px; */
-  background-image: linear-gradient(163deg, #00ff75 0%, #0000ff 100%);
-  border-radius: 20px;
+  background-image: linear-gradient(163deg, #0000ff 0%, #00ff75 100%);
   transition: all .3s;
   margin-top: 1px;
  }
  
  .card2 {
-  /* width: calc(100% - 20px); */
-  /* height: 40px; */
   background-color: #1a1a1a;
-  /* border-radius: 0px; */
   transition: all .2s;
   font-size: larger;
   color: #dedede;
-  /* padding-left: 20px; */
-  /* padding-top: 20px; */
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* margin-top: 1px; */
  }
  .card2 span {
     margin-left: 20px;
@@ -112,56 +97,23 @@
  }
  
  .card2:hover {
-  transform: scale(0.98);
-  border-radius: 20px;
+  transform: scale(0.99);
+  border-radius: 10px;
  }
  
  .card:hover {
   box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
  }
-
- /* .img{
-    background-color: #00ff75;
-    margin-left: 260px;
-    width: 40px;
-    margin-top: -30px;
- } */
-/*  .del{
-    width: 50px;
-    margin: 5px;
-} */
-
-/*  */
-/* .note{
-    background-color:rgb(18, 18, 18);
-    color: aliceblue;
-    width: calc(100% - 40);
-    height: 40px;
-    padding: 20px;
-    margin-top: 1px;
-    font-size: larger;
-    text-align: center;
-    border-radius: 25px;
-} */
-
-/* .note:hover{
-    background-color: rgb(12, 12, 12);
-} */
-
-
 .note-box{
   position: absolute;
   background-color:#1a1a1a;
   color:#dedede;
-  /* margin-left: 25%; */
   width: 71%;
   height: calc(100vh - 100px);
   padding: 20px;
   margin-top: 50px;
   font-size: xx-large;
-  /* border: 1px solid black; */
   outline: none;
-  /* overflow-y: scroll; */
 }
 .text{
   position: absolute;
@@ -171,7 +123,6 @@
   margin-left: 25%;
 }
 .NoteImg{
-  position: absolute;
   width: 60px;
 }
 .done-img{
@@ -187,5 +138,41 @@
   left: 0px;
   width: 100%;
   height: 50px;
-  background-color: #1a1a1a;  
+  background-color: #1a1a1a;
+}
+.NoteName{
+  color: #dedede;
+  font-size: large;
+  width: 70%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.create{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 5%;
+}
+.N{
+  padding-right: 20%;
+  font-size: larger;
+  color: #dedede;
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1a1a1a;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
